Made buttons on copy collection page top aligned - Bug #1530008
Also swapped round the 'copy page' and 'copy collection' buttons

behatnotneeded

--- a/htdocs/theme/raw/sass/components/_btn.scss
+++ b/htdocs/theme/raw/sass/components/_btn.scss
@@ -153,6 +153,9 @@ td.btn-group {
 
 td.action-list-copy {
     min-width: 195px;
+    .btn-group-top {
+        margin-top: -8px;
+    }
 }
 
 // Often the same template is used to render buttons at the top of the page and
